<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <it.slug.distagione.SquareButton
            android:id="@+id/jan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jan" />
    <it.slug.distagione.SquareButton
            android:id="@+id/feb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feb" />
    <it.slug.distagione.SquareButton
            android:id="@+id/mar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mar" />
    <it.slug.distagione.SquareButton
            android:id="@+id/apr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apr" />
    <it.slug.distagione.SquareButton
            android:id="@+id/may"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/may" />
    <it.slug.distagione.SquareButton
            android:id="@+id/jun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jun" />
    <it.slug.distagione.SquareButton
            android:id="@+id/jul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jul" />
    <it.slug.distagione.SquareButton
            android:id="@+id/sep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sep" />
    <it.slug.distagione.SquareButton
            android:id="@+id/oct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oct" />
    <it.slug.distagione.SquareButton
            android:id="@+id/nov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nov" />
    <it.slug.distagione.SquareButton
            android:id="@+id/dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dec" />
</LinearLayout>
